# clowncc

./: .gitignore  Cargo.toml
clown_lex/: Cargo.toml
clown_macros/: Cargo.toml
clown_macros/src/: context_bool.rs  lib.rs
clown_token/: Cargo.toml
clown_token/examples/: token_dumper.rs
clown_token/src/: char_info.rs  cursor.rs  lib.rs  tests.rs  token.rs
clown_version/: Cargo.toml
clown_version/src/: common_macros.rs  lib.rs  std_version.rs  tests.rs
clowncc_lex/: Cargo.toml
clowncc_macros/: Cargo.toml
clowncc_macros/src/: context_bool.rs  debug_assertions.rs  lib.rs
clowncc_parse/: Cargo.toml
clowncc_proc_macros/: Cargo.toml
clowncc_proc_macros/src/: errors.rs  keyword_enum.rs  lib.rs  syn_ext.rs  synstructure_ext.rs  versioned.rs
clowncc_proc_macros/src/versioned/: mod.rs  var_attribute.rs
clowncc_proc_macros/tests/: keyword_enum_tests.rs  versioned_tests.rs
clowncc_token/: Cargo.toml
clowncc_token/examples/: token_dumper.rs
clowncc_token/src/: char_info.rs  cursor.rs  lib.rs  tests.rs  token.rs
clowncc_token/tests/: tokenization_tests.rs
clowncc_version/: Cargo.toml
clowncc_version/src/: common_macros.rs  language.rs  lib.rs  std_version.rs  tests.rs
clownlib_proc_macro_support/: Cargo.toml
clownlib_proc_macro_support/src/: errors.rs  lib.rs  syn_ext.rs  synstructure_ext.rs
clownlib_static_assert/: Cargo.toml
clownlib_static_assert/src/: lib.rs
clownlib_std_ext/: Cargo.toml
clownlib_std_ext/src/: lib.rs  option.rs
