[package]
name = "clowncc_proc_macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
clownlib_proc_macro_support = { path = "../clownlib_proc_macro_support" }

proc-macro2 = "1.0.66"
quote = "1.0.32"
synstructure = "0.13.0"
syn = { version = "2.0.28", features = ["full"] }

[dev-dependencies]
clowncc_version = { path = "../clowncc_version" }

phf = { version = "0.11", features = ["macros"] }
strum = "0.25.0"
