[package]
name = "clowncc_token"
version = "0.0.0"
edition = "2021"

[dependencies]
clowncc_macros = { path = "../clowncc_macros" }
clowncc_version = { path = "../clowncc_version" }

bitflags = "2.3.3"
unicode-ident = "1.0.11"

[dev-dependencies]
clownlib_static_assert = { path = "../clownlib_static_assert" }

expect-test = "1.4.0"
