[package]
name = "clowncc_token"
version = "0.0.0"
edition = "2021"

[dependencies]
clowncc_macros = { path = "../clowncc_macros" }
clowncc_version = { path = "../clowncc_version" }

context_type = { git = "https://github.com/red1bluelost/context_type" }

bitflags = "2.4.0"
unicode-ident = "1.0.12"

[dev-dependencies]
clownlib_static_assert = { path = "../clownlib_static_assert" }

expect-test = "1.4.1"
